--- a/routes/index/index.hbs
+++ b/routes/index/index.hbs
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/png" href="css/assets/favicon.png" />
     <link rel="stylesheet" href="css/adapt.css" />
     <link rel="stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://blinkauthoring.com/assets/app/{{clientCss}}.css">
     <script type="text/javascript" src="modernizr.js"></script>
     <script src="//cdn.ckeditor.com/4.5.7/full-all/ckeditor.js"></script>
     {{#if isProduction}}
